crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_bindings__cleanup_safe_argument.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_bindings.rs
assertion_line: 258
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), candidate.result, candidate.logs))"
---
--- unoptimized Core
(\unused#1 : @delay int -> 42) (delay error)
--- unoptimized UPLC
(program 1.1.0 [(lam unused_1 (con integer 42)) (delay (error))])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
(\unused#1 : @delay int -> 42) (delay error)
--- core after
42
--- result
(con integer 42)
--- logs
[]
