crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_bindings__failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_bindings.rs
assertion_line: 34
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let unused#2 : int = error in
42
--- unoptimized UPLC
(program 1.1.0 [(lam unused_2 (con integer 42)) (error)])
--- optimized Core
let unused#1 : int = error in
42
--- optimized UPLC
(program 1.1.0 [(lam unused_2 (con integer 42)) (error)])
--- isolated pass
--- core before
let unused#2 : int = error in
42
--- uplc before
(program 1.1.0 [(lam unused_2 (con integer 42)) (error)])
--- core after
let unused#2 : int = error in
42
--- uplc after
(program 1.1.0 [(lam unused_2 (con integer 42)) (error)])
--- result
error: ExplicitErrorTerm
--- logs
[]
